# Portfolio

./: pyproject.toml
port/migrations/: 0002_alter_hire_me_company_name_alter_hire_me_currency_and_more.py  0003_hire_me_pay_type.py
port/templates/: hire_me.html  projects.html  stalk_me.html  work_experience.html
portfolio/: settings.py  urls.py
portfolio/port/: admin.py  models.py  views.py
portfolio/port/migrations/: 0001_initial.py  0004_alter_hire_me_pay_type.py
portfolio/port/templates/: base.html  hire_me.html  omacare.html  work_experience.html
portfolio/port/templates/website/: sidebar.html
portfolio/portfolio/: settings.py
