[tool.poetry]
name = "sarthak-portfolio"
version = "0.1.0"
description = ""
authors = ["Sarthak5598 <sarthak5598sharma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
import-export = "^0.3.1"
django-import-export = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
